# tsuki-synth

./: .gitignore  CMakeLists.txt  CONTEXT.md  DEV-LOG.md  DEVLOG.md  README.md  ROADMAP.md  ROADMAP_PHYSICS.md  SCORE_GUIDE.md  SOUND_DESIGN_SPEC.md  SOUND_LIBRARY_PLAN.md  TODO.md  TODO_HANDOFF.md  TsukiSynth_FM_Piano_調整補強書_v1_2.md
.github/workflows/: physics.yml
data/: materials.json
docs/: AI_PERFORMANCE_PLAYBOOK.zh-TW.md  AI_PHYSICAL_COMPOSITION_GUIDE.zh-TW.md  DEEP_FIX_ROUND2_2026-07-18.zh-TW.md  DEEP_FIX_VERIFICATION_2026-07-17.zh-TW.md  EIGENVALUE_SOURCES.md  GUI_DESIGN_GUIDE.md  MATERIALS_SOURCES.md
reports/: consonance_tables.md  deep_fix_before_after.md  m2_before_after_report.md  m3_corpus_triage.md  materials_physicalization_proposal.md  phase_h_before_after.md  rules_v2_demo_consonance_check.md  velocity_before_after.md
reports/gate_outputs/: amps_residual_attribution.md  amps_rootcause_analysis.md  audit_v2_FINAL.txt  build_audit_log_20260705.txt  build_cli_log_20260705.txt  ci_m1scope_sanity.txt  deepfix2_consonance.txt  deepfix2_corpus_A_examples_airadiance.txt  deepfix2_corpus_B_classical.txt  deepfix2_corpus_C_library_1.txt  deepfix2_corpus_D_library_2.txt  deepfix2_ctest.txt  deepfix2_gate_full.txt  deepfix2_pytests.txt  deepfix2_schema80.txt  deepfix2_selftest.txt  deepfix2_tuner_oracle.txt  deepfix3_gate_full.txt  deepfix3_pytests.txt  deepfix3_selftest.txt  deepfix3_summer_rest_sweep.txt  deepfix3_summer_verify.txt  deepfix4_corpus_A_examples_airadiance.txt  deepfix4_corpus_B_classical.txt  deepfix4_corpus_C_library_1.txt  deepfix4_corpus_D_library_2.txt  deepfix4_gate_full.txt  deepfix4_pytests.txt  deepfix4_selftest.txt  dump_modes_clockwork_ambient_001_20260705.json  dump_modes_forest_ambient_001_20260705.json  dump_modes_ocean_ui_001_20260705.json  dump_modes_rabbit_notify_001_20260705.json  full_BEFORE_velocity_fix.txt  full_O1_verify.txt  m2_gate_amps.txt  m2_gate_full.txt  phase_d_gate_amps.txt  phase_d_gate_full.txt  phase_d_gate_full_v2.txt  (+23 more)
reports/m2_before_after/after/: partials_after.json
reports/m2_before_after/before/: gate_full_before.txt  partials_baseline.json
reports/phase_h_before_after/: analyze.py  results.pkl
scores/: verify_exemptions.json
scores/classical/vivaldi_four_seasons/: README.md  vivaldi_four_seasons.catalog.json
scores/classical/vivaldi_four_seasons/autumn/: vivaldi_four_seasons_autumn_m1.score.json  vivaldi_four_seasons_autumn_m2.score.json  vivaldi_four_seasons_autumn_m3.score.json
scores/classical/vivaldi_four_seasons/spring/: vivaldi_four_seasons_spring_m1.score.json  vivaldi_four_seasons_spring_m2.score.json  vivaldi_four_seasons_spring_m3.score.json
scores/classical/vivaldi_four_seasons/summer/: vivaldi_four_seasons_summer_m1.score.json  vivaldi_four_seasons_summer_m2.score.json  vivaldi_four_seasons_summer_m3.score.json
scores/classical/vivaldi_four_seasons/winter/: vivaldi_four_seasons_winter_m1.score.json  vivaldi_four_seasons_winter_m2.score.json  vivaldi_four_seasons_winter_m3.score.json
scores/examples/: akashic_bell.score.json  epiano_3stack_test.score.json  fur_elise_opening.score.json  layered_transition.score.json  moonlight_sonata_complete.score.json  moonlight_sonata_movement1_tongue_drum.score.json  moonlight_sonata_movement1_yangqin.score.json  moonlight_sonata_movement1_yangqin_tongue_mix.score.json  physical_piano.score.json  rabbit_warning.score.json  restraint_metal_click.score.json  water_gong_clamped.report.html  water_gong_clamped.score.json  water_gong_free.score.json
scores/originals/ai_radiance/: PHYSICS_REPORT.md  README.md  ai_radiance.catalog.json  ai_radiance_complete.score.json  ai_radiance_m1.report.html  ai_radiance_m1.score.json  ai_radiance_m2.score.json  ai_radiance_m3.score.json  ai_radiance_m4.score.json
scores/originals/rules_v2_demo/: README.md  rules_v2_demo_001.report.html  rules_v2_demo_001.score.json
scores/schema/: score.schema.json
scores/tests/: test_distortion.score.json  test_distortion_bitcrush.score.json  test_engine_levels.score.json  test_glide.score.json  test_layer.score.json  test_trim.score.json
sound_library/: sound_names.json  tags.json
src/: HarmonicEditor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetBrowser.h  PresetManager.h  Presets.h  TsukiLookAndFeel.h  UiLocale.h
src/analyzer/: AnalyzerPanel.h  OscilloscopeView.h  PitchDetector.h  SpectrumView.h  TunerView.h
src/cli/: RenderApp.cpp
src/dsp/: AudioFIFO.h  BiquadFilter.h  BodyResonance.h  Compressor.h  DelayLine.h  DiagnosticOverrides.h  Distortion.h  EffectsChain.h  Envelope.h  LFO.h  MidiNoteTracker.h  ModalResonator.h  NoiseGen.h  Oscillator.h  Reverb.h
src/effects/: Compressor.h  EffectChain.h  SimpleReverb.h  StereoDelay.h
src/engines/: ChromaticEngine.h  CimbalomEngine.h  FMPianoEngine.h
src/physics/: BeamModel.h  HammerImpulse.h  MaterialDB.h  PlateModel.h  StringModel.h
src/score/: ScoreParser.h  ScoreRenderer.h  WavWriter.h
tests/: audit_repro.cpp  physics_models_repro.cpp  test_consonance_contract.py  test_physics_verify.py  test_verify_score_contract.py  tuner_repro.cpp
tools/: check_piece_consonance.py  compose_ai_radiance.py  consonance.py  loudness.py  midi_to_tsukisynth.py  physics_verify.py  report_html.py  requirements-physics.txt  tuner_audit.py  tuner_audit_v2.py  verify_score.py
uiux/: TsukiSynth.html  app.jsx  components.jsx  engines.jsx
uiux/studio_uiux/: Charta Workbench.html  design-canvas.jsx
uiux/studio_uiux/screens/: charta-shell.jsx  design-system.jsx  screen1-overview.jsx  screen10-export.jsx  screen11-log.jsx  screen2-config.jsx  screen3-newtask.jsx  screen4-research.jsx  screen5-body.jsx  screen6-review.jsx  screen7-refine.jsx  screen8-special.jsx  screen9-links.jsx
uiux/studio_uiux/styles/: charta.css
uiux/studio_uiux/uploads/: seo_content_studio_charta_uiux_guide.md
